--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "dotenv": "^17.2.2",
     "expo": "^54.0.1",
+    "expo-clipboard": "^8.0.7",
+    "expo-file-system": "^19.0.17",
+    "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.7",
     "firebase": "^12.2.1",
     "react": "19.1.0",
