--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.2",
     "expo": "^54.0.1",
     "expo-clipboard": "^8.0.7",
+    "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.17",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.7",
